runway com alguns erros

--- a/pom.xml
+++ b/pom.xml
@@ -1,29 +1,58 @@
 <Airport
-      country="Portugal"
-      city="Porto"
-      name="Francisco Sa Carneiro"
-      lat="41.2355555221438"
-      lon="-8.67805570363998"
-      alt="69.494M"
-      magvar="5"
-      trafficScalar="0.7"
-      airportTestRadius="5000.0M"
-      ident="LPPR"
-      >
-	  
-	  <Services>
-         <Fuel
-            type="130"
-            availability="YES"/>
-         <Fuel
-            type="JETA"
-            availability="YES"/>
-      </Services>
-
-  	<Tower
-         lat="25.8065129444003"
-         lon="-80.2752287685871"
-         alt="18.897M"
+   country="Portugal"
+   city="Porto"
+   name="Francisco Sa Carneiro"
+   lat="41.2355555221438"
+   lon="-8.67805570363998"
+   alt="69.494M"
+   magvar="5"
+   trafficScalar="0.7"
+   airportTestRadius="5000.0M"
+   ident="LPPR"
+   >
+   <Services>
+      <Fuel
+         type="100"
+         availability="YES"/>
+      <Fuel
+         type="JETA"
+         availability="YES"/>
+      <Fuel
+         type="JETA1"
+         availability="YES"/>
+   </Services>
+   <DeleteAirport
+         deleteAllRunways="TRUE"
+         deleteAllStarts="TRUE"
+         deleteAllHelipads="TRUE"
+         deleteAllFrequencies="TRUE"
+         deleteAllTaxiways="TRUE"
+         deleteAllAprons="TRUE"
+		 deleteAllApproaches="FALSE"
+         deleteAllApronLights="TRUE"
          />
+   <Tower
+      lat="41.2387912720442"
+      lon="-8.67242753505707"
+      alt="0.0M">
+   </Tower>
+   <Runway
+      lat="41.35184943"
+      lon="-89.15309158"
+      alt="199.33918762"
+      surface="ASPHALT"
+      heading="179.580000"
+      length="6000F"
+      width="100F"
+      number="18"
+      designator="NONE"
+      patternAltitude="304.799988"
+      primaryTakeoff="YES"
+      primaryLanding="YES"
+      primaryPattern="LEFT"
+      secondaryTakeoff="YES"
+      secondaryLanding="YES"
+      secondaryPattern="LEFT">
+</Runway>
 
-</Airport>
+ </Airport>
