--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,10 @@
 		 deleteAllApproaches="FALSE"
          deleteAllApronLights="TRUE"
          />
+   <DeleteRunway
+      surface="ASPHALT"
+      number="18"
+      designator="NONE"/>
    <Tower
       lat="41.2387912720442"
       lon="-8.67242753505707"
